--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>All About Me | Jason Rayga</title>
 
-    <!-- Latest compiled and minified Bootstrap 3.3.7 CSS -->
-    <link rel="stylesheet" href="https://bootswatch.com/3/superhero/bootstrap.min.css">
+    <!-- Latest compiled and minified Bootstrap 4.4.1 CSS -->
+    <link rel="stylesheet" href="./ASSETS/css/bootstrap.min.css">
 
     <!-- Website Icon -->
-    <link rel="shortcut icon" href="./ASSETS/img/jasonrayga.jpg">
+    <link rel="shortcut icon" type="image/jpg" href="./ASSETS/img/jasonrayga.jpg">
 
     <!-- MainCSS -->
     <link rel="stylesheet" href="./ASSETS/css/main.css">
@@ -21,64 +21,53 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="./ASSETS/css/animate.min.css">
 
-    <style type="text/css">
-        [ng\:cloak],
-        [ng-cloak],
-        [data-ng-cloak],
-        [x-ng-cloak],
-        .ng-cloak,
-        .x-ng-cloak {
-            display: none !important;
-        }
-    </style>
-
     <!-- Ng1 Main.js -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="./ASSETS/js/angular.min.js"></script>
 </head>
 
 <body ng-controller="Index" ng-cloak>
 
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#/">JR</a>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#!/">JR</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
+            aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li ng-class="{'active' : nav == 'aboutMe'}"><a ng-click="goTo('aboutMe')">About Me</a></li>
-                    <li ng-class="{'active' : nav == 'featuresAndProgrammingLanguages'}"><a
-                            ng-click="goTo('featuresAndProgrammingLanguages')">Modules Done And Programming
-                            Languages</a></li>
-                    <li ng-class="{'active' : nav == 'works'}"><a ng-click="goTo('works')">Works</a></li>
-                </ul>
-            </div>
+        <div class="collapse navbar-collapse" id="navbarColor02">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item" ng-class="{'active' : nav == 'aboutMe'}">
+                    <a class="nav-link" ng-click="goTo('aboutMe')">About Me</a>
+                </li>
+                <li class="nav-item" ng-class="{'active' : nav == 'featuresAndProgrammingLanguages'}">
+                    <a class="nav-link" ng-click="goTo('featuresAndProgrammingLanguages')">Modules Done And Programming
+                        Languages </a>
+                </li>
+                <li class="nav-item" ng-class="{'active' : nav == 'works'}">
+                    <a class="nav-link" ng-click="goTo('works')">Works</a>
+                </li>
+            </ul>
+
         </div>
     </nav>
 
-    <div class="container" ng-view>
+    <div class="container h-100" ng-view>
         <!-- AngularView Here -->
     </div>
 
     <!-- Ng1 Plugins -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+    <script src="./ASSETS/js/angular-route.min.js"></script>
+    <script src="./ASSETS/js/angular-animate.min.js"></script>
 
     <!-- MainJS -->
-    <script src="./JS/minified/alljs.min.js"></script>
+    <!-- <script src="./JS/minified/alljs.min.js"></script> -->
 
-    <!-- Latest compiled and minified Bootstrap 3.3.7 JavaScript And Jquery 3.3.1 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
+    <script src="./JS/app.js"></script>
+
+    <!-- Latest compiled and minified Bootstrap 4.4.1 JavaScript And Jquery -->
+    <script src="./ASSETS/js/jquery.min.js"></script>
+    <script src="./ASSETS/js/popper.min.js"></script>
+    <script src="./ASSETS/js/bootstrap.min.js"></script>
 </body>
 
 </html>
