Follow up updates.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
     <script src="./ASSETS/js/angular-animate.min.js"></script>
 
     <!-- MainJS -->
-    <!-- <script src="./JS/minified/alljs.min.js"></script> -->
-
-    <script src="./JS/app.js"></script>
+    <script src="./JS/minified/alljs.min.js"></script>
 
     <!-- Latest compiled and minified Bootstrap 4.4.1 JavaScript And Jquery -->
     <script src="./ASSETS/js/jquery.min.js"></script>
