Updated base link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script src="./ASSETS/js/popper.min.js"></script>
     <script src="./ASSETS/js/bootstrap.min.js"></script>
 
-    <base href="/JasonRayga/">
+    <base href="/">
 </head>
 
 <body ng-controller="Index" ng-cloak>
