--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta itemprop="url" content="http://jrayga.xyz/">
     <meta name="description" content="Personal Career website to be used in Job Applications and other inquiries.">
 
+    <!-- BASE HREF -->
+    <base href="/">
+
     <!-- Latest compiled and minified Bootstrap 4.4.1 CSS -->
     <link rel="stylesheet" href="./ASSETS/css/bootstrap.min.css">
 
@@ -37,7 +40,6 @@
     <script src="./ASSETS/js/popper.min.js"></script>
     <script src="./ASSETS/js/bootstrap.min.js"></script>
 
-    <base href="/">
 </head>
 
 <body ng-controller="Index" ng-cloak>
