--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- animate.css-->
     <link rel="stylesheet" href="./ASSETS/it-worker-theme/vendor/animate.css/animate.css">
     <!-- theme stylesheet-->
-    <link rel="stylesheet" href="./ASSETS/it-worker-theme/css/style.default.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="./ASSETS/it-worker-theme/css/style.black.css" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="./ASSETS/it-worker-theme/css/custom.css">
     <!-- Leaflet CSS - For the map-->
@@ -43,7 +43,7 @@
     <!-- navbar-->
     <header class="header">
         <nav class="navbar navbar-expand-lg fixed-top">
-            <div class="container"><a href="#intro" class="navbar-brand scrollTo">IT Worker</a>
+            <div class="container"><a href="#intro" class="navbar-brand scrollTo">Jason Rayga</a>
                 <button type="button" data-toggle="collapse" data-target="#navbarcollapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
                     class="navbar-toggler navbar-toggler-right"><span class="fa fa-bars"></span></button>
@@ -51,11 +51,11 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a href="#intro" class="nav-link link-scroll">Intro</a></li>
                         <li class="nav-item"><a href="#about" class="nav-link link-scroll">About</a></li>
-                        <li class="nav-item"><a href="#services" class="nav-link link-scroll">Services</a></li>
-                        <li class="nav-item"><a href="#testimonials" class="nav-link link-scroll">Testimonials</a></li>
-                        <li class="nav-item"><a href="#references" class="nav-link link-scroll">My work</a></li>
-                        <li class="nav-item"><a href="#customers" class="nav-link link-scroll">Clients</a></li>
-                        <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Contact</a></li>
+                        <!-- <li class="nav-item"><a href="#services" class="nav-link link-scroll">Services</a></li> -->
+                        <!-- <li class="nav-item"><a href="#testimonials" class="nav-link link-scroll">Testimonials</a></li> -->
+                        <li class="nav-item"><a href="#references" class="nav-link link-scroll">My works</a></li>
+                        <!-- <li class="nav-item"><a href="#customers" class="nav-link link-scroll">Clients</a></li>
+                        <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Contact</a></li> -->
                     </ul>
                 </div>
             </div>
@@ -131,13 +131,13 @@
                     </div>
                 </div>
                 <div data-animate="fadeInUp" class="col-sm-6 mx-auto mt-5"><img
-                        src="./ASSETS/it-worker-theme/img/about.jpg" alt="This is me - IT worker"
+                        src="./ASSETS/it-worker-theme/img/about.jpg" alt="This is me - Jason Rayga"
                         class="image rounded-circle img-fluid"></div>
             </div>
         </div>
     </section>
     <!-- Service-->
-    <section id="services" class="bg-gradient services-section">
+    <!-- <section id="services" class="bg-gradient services-section">
         <div class="container">
             <header class="text-center">
                 <h2 data-animate="fadeInDown" class="title">Services</h2>
@@ -172,9 +172,9 @@
                 <p><a href="#contact" class="btn btn-outline-light link-scroll">Contact me</a></p>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Testimonials-->
-    <section id="testimonials" class="testimonials-section bg-gray">
+    <!-- <section id="testimonials" class="testimonials-section bg-gray">
         <div class="container">
             <header class="text-center mb-2">
                 <h2 data-animate="fadeInUp" class="title">My customers said<br><span>about me</span></h2>
@@ -271,9 +271,9 @@
                 </li>
             </ul>
         </div>
-    </section>
+    </section> -->
     <!-- Statistics-->
-    <section id="statistics" data-dir="up"
+    <!-- <section id="statistics" data-dir="up"
         style="background: url(&quot;./ASSETS/it-worker-theme/img/parallax.jpg&quot;);"
         class="statistics-section text-white parallax parallax">
         <div class="container">
@@ -307,7 +307,7 @@
             </div>
         </div>
         <div class="dark-mask"></div>
-    </section>
+    </section> -->
     <!--
     *** REFERENCES IMAGE ***
     _________________________________________________________
@@ -320,13 +320,13 @@
                     <p data-animate="fadeInUp" class="lead">I have worked on dozens of projects so I have picked only
                         the latest for you.</p>
                 </div>
-                <ul id="filter" data-animate="fadeInUp">
+                <!-- <ul id="filter" data-animate="fadeInUp">
                     <li class="active"><a href="#" data-filter="all">All</a></li>
                     <li><a href="#" data-filter="webdesign">Webdesign</a></li>
                     <li><a href="#" data-filter="seo">SEO</a></li>
                     <li><a href="#" data-filter="marketing">Marketing</a></li>
                     <li><a href="#" data-filter="other">Other</a></li>
-                </ul>
+                </ul> -->
                 <div id="detail">
                     <div class="row">
                         <div class="col-lg-10 mx-auto"><span class="close">×</span>
@@ -579,7 +579,7 @@
         </div>
     </section>
     <!-- Customers-->
-    <section id="customers" class="customers-section bg-gray">
+    <!-- <section id="customers" class="customers-section bg-gray">
         <div class="container">
             <div class="col-md-12">
                 <div class="row align-items-center">
@@ -622,9 +622,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Contact-->
-    <section id="contact" data-animate="bounceIn" class="contact-section contact">
+    <!-- <section id="contact" data-animate="bounceIn" class="contact-section contact">
         <div class="container">
             <header class="text-center">
                 <h2 class="title">Contact me</h2>
@@ -663,23 +663,27 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Map-->
-    <div id="map"></div>
+    <!-- <div id="map"></div> -->
     <footer class="main-footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-lg-left">
-                    <p class="social"><a href="#" class="external facebook wow fadeInUp"><i
-                                class="fa fa-facebook"></i></a><a href="#" data-wow-delay="0.2s"
-                            class="external instagram wow fadeInUp"><i class="fa fa-instagram"></i></a><a href="#"
-                            data-wow-delay="0.4s" class="external gplus wow fadeInUp"><i
-                                class="fa fa-google-plus"></i></a><a href="#" data-wow-delay="0.6s"
-                            class="email wow fadeInUp"><i class="fa fa-envelope"></i></a></p>
+                    <p class="social">
+                        <a href="https://www.facebook.com/jsonryga/" target="_blank"
+                            class="external facebook wow fadeInUp"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/in/jasonrayga/" target="_blank" data-wow-delay="0.2s"
+                            class="external linkedin wow fadeInUp"><i class="fa fa-linkedin"></i></a>
+                        <!-- <a href="#" target="_blank" data-wow-delay="0.4s" class="external gplus wow fadeInUp"><i
+                                class="fa fa-google-plus"></i></a> -->
+                        <a href="mailto:raygajason@gmail.com" target="_blank" data-wow-delay="0.6s"
+                            class="email wow fadeInUp"><i class="fa fa-envelope"></i></a>
+                    </p>
                 </div>
                 <!-- /.6-->
                 <div class="col-md-6 text-center text-lg-right mt-4 mt-lg-0">
-                    <p>© 2018 Your name goes here. All rights reserved.</p>
+                    <p>© 2018 JasonRayga. All rights reserved.</p>
                 </div>
                 <div class="col-12 mt-4">
                     <p class="template-bootstrapious">Template by <a
