--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" type="image/jpg" href="./ASSETS/img/jasonrayga.jpg">
 
     <!-- BASE HREF -->
-    <!-- <base href="/"> -->
+    <base href="/">
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="./dist/main/css/main.min.css">
@@ -44,7 +44,8 @@
                     class="navbar-toggler navbar-toggler-right"><span class="fa fa-bars"></span></button>
                 <div id="navbarcollapse" class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active"><a href="" ng-click="goTo('intro')" class="nav-link link-scroll">Intro</a>
+                        <li class="nav-item active"><a href="" ng-click="goTo('intro')"
+                                class="nav-link link-scroll">Intro</a>
                         </li>
                         <li class="nav-item"><a href="" ng-click="goTo('about')" class="nav-link link-scroll">About</a>
                         </li>
