--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     </div>
                 </div> -->
                     <div class="skill-item">
-                        <div class="progress-title">Angular</div>
+                        <div class="progress-title">Angular 2+</div>
                         <div class="progress">
                             <div role="progressbar" style="width: 65%" aria-valuenow="90" aria-valuemin="0"
                                 aria-valuemax="100" class="progress-bar"></div>
