--- a/index.html
+++ b/index.html
@@ -81,17 +81,6 @@
             </header>
             <div class="row">
                 <div data-animate="fadeInUp" class="col-lg-6">
-                    <!-- <p>An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all
-                    projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr
-                    elegance marriage strongly. Off can admiration prosperous now devonshire diminution law.</p>
-                <p>Received overcame oh sensible so at an. Formed do change merely to county it. <strong>Am separate
-                        contempt</strong> domestic to to oh. On relation my so addition branched. Put hearing
-                    cottage she norland letters equally prepare too. Replied exposed savings he no viewing as up.
-                    Soon body add him hill. No father living really people estate if. Mistake do produce beloved
-                    demesne if am pursuit.</p>
-                <p>An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all
-                    projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr
-                    elegance marriage strongly. Off can admiration prosperous now devonshire diminution law.</p> -->
                     <p>
                         Outgoing young Web Developer. Knowledgeable in backend and frontend development. Was the Main
                         Developer for the very first Applicant Tracking Software and Resume Bank in the Philippines.
@@ -104,14 +93,14 @@
                     <div class="skill-item">
                         <div class="progress-title">PHP</div>
                         <div class="progress">
-                            <div role="progressbar" style="width: 60%" aria-valuenow="0" aria-valuemin="60"
+                            <div role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="60"
                                 aria-valuemax="100" class="progress-bar"></div>
                         </div>
                     </div>
                     <div class="skill-item">
                         <div class="progress-title">PostgreSQL</div>
                         <div class="progress">
-                            <div role="progressbar" style="width: 50%" aria-valuenow="0" aria-valuemin="60"
+                            <div role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="60"
                                 aria-valuemax="100" class="progress-bar"></div>
                         </div>
                     </div>
@@ -132,14 +121,14 @@
                     <div class="skill-item">
                         <div class="progress-title">CSS & Bootstrap</div>
                         <div class="progress">
-                            <div role="progressbar" style="width: 70%" aria-valuenow="80" aria-valuemin="0"
+                            <div role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                                 aria-valuemax="100" class="progress-bar"></div>
                         </div>
                     </div>
                     <div class="skill-item">
                         <div class="progress-title">Ionic Angular</div>
                         <div class="progress">
-                            <div role="progressbar" style="width: 55%" aria-valuenow="80" aria-valuemin="0"
+                            <div role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0"
                                 aria-valuemax="100" class="progress-bar"></div>
                         </div>
                     </div>
@@ -153,24 +142,24 @@
                     <div class="skill-item">
                         <div class="progress-title">Angular 2+</div>
                         <div class="progress">
-                            <div role="progressbar" style="width: 65%" aria-valuenow="90" aria-valuemin="0"
+                            <div role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0"
                                 aria-valuemax="100" class="progress-bar"></div>
                         </div>
                     </div>
                     <div class="skill-item">
                         <div class="progress-title">AngularJS 1.x</div>
                         <div class="progress">
-                            <div role="progressbar" style="width: 75%" aria-valuenow="90" aria-valuemin="0"
+                            <div role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
                                 aria-valuemax="100" class="progress-bar"></div>
                         </div>
                     </div>
-                    <!-- <div class="skill-item">
-                    <div class="progress-title">SEM</div>
-                    <div class="progress">
-                        <div role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
-                            aria-valuemax="100" class="progress-bar progress-bar-skill5"></div>
+                    <div class="skill-item">
+                        <div class="progress-title">Firebase (Hosting and Functions)</div>
+                        <div class="progress">
+                            <div role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                                aria-valuemax="100" class="progress-bar progress-bar-skill5"></div>
+                        </div>
                     </div>
-                </div> -->
                 </div>
                 <div data-animate="fadeInUp" class="col-sm-6 mx-auto mt-5">
                     <a href="./ASSETS/Jrayga.docx" title="Download Resume">
@@ -750,11 +739,9 @@ _________________________________________________________
                         <a href="https://www.facebook.com/jsonryga/" target="_blank"
                             class="external facebook wow fadeInUp"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.linkedin.com/in/jasonrayga/" target="_blank" data-wow-delay="0.2s"
-                            class="external linkedin wow fadeInUp"><i class="fa fa-linkedin"></i></a>
-                        <!-- <a href="#" target="_blank" data-wow-delay="0.4s" class="external gplus wow fadeInUp"><i
-                                class="fa fa-google-plus"></i></a> -->
+                            class="external linkedin wow fadeInUp"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         <a href="mailto:raygajason@gmail.com" target="_blank" data-wow-delay="0.6s"
-                            class="email wow fadeInUp"><i class="fa fa-envelope"></i></a>
+                            class="email wow fadeInUp"><i class="fa fa-envelope" aria-hidden="true"></i></a>
                     </p>
                 </div>
                 <!-- /.6-->
