--- a/index.html
+++ b/index.html
@@ -74,8 +74,13 @@
                 <img src="https://raw.githubusercontent.com/jrayga/JasonRayga/master/ASSETS/it-worker-theme/img/logo-big.png"
                     alt="logo" width="130" />
             </div>
-            <h1 data-animate="fadeInDown" class="text-shadow mb-5">Hello, hola, नमस्ते, Kamusta!</h1>
-            <p data-animate="slideInUp" class="h3 text-shadow text-400">JasonRayga here! At your service ♥</p>
+            <h1 data-animate="fadeInDown" class="text-shadow mb-5" style="text-shadow:-7px 5px 4px black;">
+                <strong>Hello, hola, नमस्ते, Kamusta!</strong>
+            </h1>
+            <p data-animate="slideInUp" class="h3 text-shadow text-400" style="text-shadow:-3px 3px 4px black;">
+                <strong>JasonRayga here! At your service
+                    ♥</strong>
+            </p>
         </div>
     </section>
 
@@ -94,7 +99,19 @@
                         Using numerous programming languages for Dynamic Web Application and Mobile Application
                         development.
                     </p>
+
                     <p>Click my picture below to download my resume :)</p>
+
+                    <div class="row">
+                        <div data-animate="fadeInUp" class="col-sm-6 mx-auto ">
+                            <a href="https://raw.githubusercontent.com/jrayga/JasonRayga/master/ASSETS/Jrayga.docx"
+                                title="Download Resume">
+                                <img src="https://raw.githubusercontent.com/jrayga/JasonRayga/master/ASSETS/img/jasonrayga.jpg"
+                                    alt="This is me - Jason Rayga" class="image rounded-circle img-fluid">
+                            </a>
+                        </div>
+                    </div>
+
                 </div>
                 <div data-animate="fadeInUp" class="col-lg-6">
                     <div class="skill-item">
@@ -107,14 +124,14 @@
                     <div class="skill-item">
                         <div class="progress-title">PostgreSQL</div>
                         <div class="progress">
-                            <div role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="60"
+                            <div role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="60"
                                 aria-valuemax="100" class="progress-bar"></div>
                         </div>
                     </div>
                     <div class="skill-item">
                         <div class="progress-title">Javascript</div>
                         <div class="progress">
-                            <div role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="60"
+                            <div role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="60"
                                 aria-valuemax="100" class="progress-bar"></div>
                         </div>
                     </div>
@@ -135,7 +152,7 @@
                     <div class="skill-item">
                         <div class="progress-title">Ionic Angular</div>
                         <div class="progress">
-                            <div role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0"
+                            <div role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                                 aria-valuemax="100" class="progress-bar"></div>
                         </div>
                     </div>
@@ -149,31 +166,24 @@
                     <div class="skill-item">
                         <div class="progress-title">Angular 2+</div>
                         <div class="progress">
-                            <div role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0"
+                            <div role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
                                 aria-valuemax="100" class="progress-bar"></div>
                         </div>
                     </div>
                     <div class="skill-item">
                         <div class="progress-title">AngularJS 1.x</div>
                         <div class="progress">
-                            <div role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                            <div role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                                 aria-valuemax="100" class="progress-bar"></div>
                         </div>
                     </div>
                     <div class="skill-item">
                         <div class="progress-title">Firebase (Hosting and Functions)</div>
                         <div class="progress">
-                            <div role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                            <div role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                                 aria-valuemax="100" class="progress-bar progress-bar-skill5"></div>
                         </div>
                     </div>
-                </div>
-                <div data-animate="fadeInUp" class="col-sm-6 mx-auto mt-5">
-                    <a href="https://raw.githubusercontent.com/jrayga/JasonRayga/master/ASSETS/Jrayga.docx"
-                        title="Download Resume">
-                        <img src="https://raw.githubusercontent.com/jrayga/JasonRayga/master/ASSETS/img/jasonrayga.jpg"
-                            alt="This is me - Jason Rayga" class="image rounded-circle img-fluid">
-                    </a>
                 </div>
             </div>
         </div>
