--- a/dev/index.html
+++ b/dev/index.html
@@ -1,42 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>All About Me | Jason Rayga</title>
 
-    <meta itemprop="name" content="All About Me | Jason Rayga">
-    <meta itemprop="url" content="http://jrayga.xyz/">
-    <meta name="description" content="Personal Career website to be used in Job Applications and other inquiries.">
-    <meta name="robots" content="all,follow">
+    <meta itemprop="name" content="All About Me | Jason Rayga" />
+    <meta itemprop="url" content="http://jrayga.xyz/" />
+    <meta
+      name="description"
+      content="Personal Career website to be used in Job Applications and other inquiries."
+    />
+    <meta name="robots" content="all,follow" />
 
     <!--Main CSS -->
     <!-- build:css ./main/css/main.min.css -->
-    <link rel="stylesheet" href="../ASSETS/it-worker-theme/vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../ASSETS/it-worker-theme/vendor/owl.carousel/assets/owl.carousel.css">
-    <link rel="stylesheet" href="../ASSETS/it-worker-theme/vendor/owl.carousel/assets/owl.theme.default.css">
-    <link rel="stylesheet" href="../ASSETS/it-worker-theme/vendor/animate.css/animate.css">
-    <link rel="stylesheet" href="../ASSETS/it-worker-theme/css/style.black.css" id="theme-stylesheet">
-    <link rel="stylesheet" href="../ASSETS/it-worker-theme/css/custom.css">
+    <link
+      rel="stylesheet"
+      href="../ASSETS/it-worker-theme/vendor/bootstrap/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../ASSETS/it-worker-theme/vendor/owl.carousel/assets/owl.carousel.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../ASSETS/it-worker-theme/vendor/owl.carousel/assets/owl.theme.default.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../ASSETS/it-worker-theme/vendor/animate.css/animate.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../ASSETS/it-worker-theme/css/style.black.css"
+      id="theme-stylesheet"
+    />
+    <link rel="stylesheet" href="../ASSETS/it-worker-theme/css/custom.css" />
     <!-- endbuild -->
 
     <!--Main JS -->
     <!-- build:js ./main/js/main.min.js -->
     <script src="../ASSETS/it-worker-theme/vendor/jquery/jquery.min.js"></script>
     <script src="../ASSETS/it-worker-theme/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../ASSETS/it-worker-theme/vendor/jquery.cookie/jquery.cookie.js"> </script>
+    <script src="../ASSETS/it-worker-theme/vendor/jquery.cookie/jquery.cookie.js"></script>
     <script src="../ASSETS/it-worker-theme/vendor/owl.carousel/owl.carousel.min.js"></script>
     <script src="../ASSETS/it-worker-theme/vendor/waypoints/lib/jquery.waypoints.min.js"></script>
     <script src="../ASSETS/it-worker-theme/vendor/jquery.counterup/jquery.counterup.js"></script>
     <script src="../ASSETS/it-worker-theme/js/front.js"></script>
     <!-- endbuild -->
-</head>
+  </head>
 
-<body>
-
-</body>
-
+  <body></body>
 </html>
