Updated meta tags

--- a/index.html
+++ b/index.html
@@ -2,20 +2,35 @@
 <html lang="en" ng-app="app_module">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>All About Me | Jason Rayga</title>
-
-    <meta itemprop="name" content="All About Me | Jason Rayga" />
-    <meta itemprop="url" content="http://jrayga.xyz/" />
+    <title>All About | Jason Rayga</title>
+    <meta itemprop="name" content="JasonRayga" />
+    <meta itemprop="url" content="https://www.jrayga.com/" />
     <meta
       name="description"
-      content="Personal Career website to be used in Job Applications and other inquiries."
+      content="Outgoing young Web Developer. Knowledgeable in backend and frontend development. Was the Main Developer for the very first Applicant Tracking Software and Resume Bank in the Philippines. Using numerous programming languages for Dynamic Web Application and Mobile Application development."
     />
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image:alt" content="JasonRayga" />
+    <meta name="twitter:site" content="https://twitter.com/JasonRayga" />
+
+    <!-- Facebook Opengraph data -->
+    <meta property="og:title" content="JasonRayga" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/jrayga/JasonRayga/master/ASSETS/img/jasonrayga.jpg"
+    />
+    <meta property="og:site_name" content="JasonRayga" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="Outgoing young Web Developer. Knowledgeable in backend and frontend development. Was the Main Developer for the very first Applicant Tracking Software and Resume Bank in the Philippines. Using numerous programming languages for Dynamic Web Application and Mobile Application development."
+    />
+    <meta property="og:url" itemprop="url" content="https://www.jrayga.com/" />
     <meta name="robots" content="all,follow" />
 
     <!-- Favicon-->
