Updated about message

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta itemprop="url" content="https://www.jrayga.com/" />
     <meta
       name="description"
-      content="Outgoing young Web Developer. Knowledgeable in backend and frontend development. Was the Main Developer for the very first Applicant Tracking Software and Resume Bank in the Philippines. Using numerous programming languages for Dynamic Web Application and Mobile Application development."
+      content="As an outgoing and experienced web developer, I possess a strong skillset in both backend and frontend development. I have a proven track record of success as the lead developer for the Philippines' first applicant tracking software and resume bank. I am well-versed in various programming languages and have experience creating dynamic web and mobile applications.."
     />
 
     <!-- Twitter Card data -->
@@ -28,7 +28,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="Outgoing young Web Developer. Knowledgeable in backend and frontend development. Was the Main Developer for the very first Applicant Tracking Software and Resume Bank in the Philippines. Using numerous programming languages for Dynamic Web Application and Mobile Application development."
+      content="As an outgoing and experienced web developer, I possess a strong skillset in both backend and frontend development. I have a proven track record of success as the lead developer for the Philippines' first applicant tracking software and resume bank. I am well-versed in various programming languages and have experience creating dynamic web and mobile applications.."
     />
     <meta property="og:url" itemprop="url" content="https://www.jrayga.com/" />
     <meta name="robots" content="all,follow" />
@@ -159,11 +159,12 @@
         <div class="row align-items-center">
           <div data-animate="fadeInUp" class="col-lg-6">
             <p>
-              Outgoing young Web Developer. Knowledgeable in backend and
-              frontend development. Was the Main Developer for the very first
-              Applicant Tracking Software and Resume Bank in the Philippines.
-              Using numerous programming languages for Dynamic Web Application
-              and Mobile Application development.
+              As an outgoing and experienced web developer, I possess a strong
+              skillset in both backend and frontend development. I have a proven
+              track record of success as the lead developer for the Philippines'
+              first applicant tracking software and resume bank. I am
+              well-versed in various programming languages and have experience
+              creating dynamic web and mobile applications.
             </p>
 
             <p class="text-center">
