--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   My work
                 </a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a
                   href=""
                   ng-click="goTo('contact')"
@@ -135,7 +135,7 @@
                 >
                   Contact
                 </a>
-              </li>
+              </li> -->
               <!-- <li class="nav-item"><a href="#testimonials" class="nav-link link-scroll">Testimonials</a></li> -->
               <!-- <li class="nav-item"><a href="#customers" class="nav-link link-scroll">Clients</a></li> -->
             </ul>
@@ -189,15 +189,15 @@
           <div data-animate="fadeInUp" class="col-lg-6">
             <p>
               As an outgoing and experienced web developer, I possess a strong
-              skillset in both backend and frontend development. I have a proven
-              track record of success as the lead developer for the Philippines'
-              first applicant tracking software and resume bank. I am
-              well-versed in various programming languages and have experience
-              creating dynamic web and mobile applications.
+              skill-set in both backend and frontend development. I have a
+              proven track record of success as the lead developer for the
+              Philippines' first applicant tracking software and resume bank. I
+              am well-versed in various programming languages and have
+              experience creating dynamic web and mobile applications.
             </p>
 
             <p class="text-center">
-              Click my picture below to download my resume :)
+              Click my picture below to download my resume 😊
             </p>
 
             <div class="row">
@@ -223,7 +223,7 @@
                   role="progressbar"
                   style="width: 60%"
                   aria-valuenow="60"
-                  aria-valuemin="60"
+                  aria-valuemin="0"
                   aria-valuemax="100"
                   class="progress-bar"
                 ></div>
@@ -236,7 +236,7 @@
                   role="progressbar"
                   style="width: 65%"
                   aria-valuenow="65"
-                  aria-valuemin="60"
+                  aria-valuemin="0"
                   aria-valuemax="100"
                   class="progress-bar"
                 ></div>
@@ -249,7 +249,7 @@
                   role="progressbar"
                   style="width: 80%"
                   aria-valuenow="80"
-                  aria-valuemin="60"
+                  aria-valuemin="0"
                   aria-valuemax="100"
                   class="progress-bar"
                 ></div>
@@ -338,9 +338,9 @@
               <div class="progress">
                 <div
                   role="progressbar"
-                  style="width: 50%"
-                  aria-valuenow="50"
-                  aria-valuemin="50"
+                  style="width: 60%"
+                  aria-valuenow="60"
+                  aria-valuemin="0"
                   aria-valuemax="100"
                   class="progress-bar"
                 ></div>
@@ -624,11 +624,6 @@ _________________________________________________________
                         class="btn btn-outline-primary"
                         ><i class="fa fa-globe"></i> Visit
                       </a>
-                      <!-- <a
-                        href="javascript:void(0);"
-                        class="btn btn-outline-primary"
-                        ><i class="fa fa-download"></i> Download case study</a
-                      > -->
                     </p>
                   </div>
                 </div>
@@ -685,7 +680,7 @@ _________________________________________________________
 </section> -->
 
     <!-- Contact-->
-    <section
+    <!-- <section
       id="contact"
       data-animate="bounceIn"
       class="contact-section contact"
@@ -760,7 +755,7 @@ _________________________________________________________
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Map -->
     <div id="map"></div>
@@ -773,22 +768,29 @@ _________________________________________________________
                 href="https://www.facebook.com/jsonryga/"
                 target="_blank"
                 class="external facebook wow fadeInUp"
-                ><i class="fa fa-facebook"></i
-              ></a>
+                rel="noopener noreferrer"
+              >
+                >
+                <i class="fa fa-facebook"></i>
+              </a>
               <a
                 href="https://www.linkedin.com/in/jasonrayga/"
                 target="_blank"
                 data-wow-delay="0.2s"
                 class="external linkedin wow fadeInUp"
-                ><i class="fa fa-linkedin" aria-hidden="true"></i
-              ></a>
+                rel="noopener noreferrer"
+              >
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+              </a>
               <a
                 href="mailto:raygajason@gmail.com"
                 target="_blank"
                 data-wow-delay="0.6s"
                 class="email wow fadeInUp"
-                ><i class="fa fa-envelope" aria-hidden="true"></i
-              ></a>
+                rel="noopener noreferrer"
+              >
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+              </a>
             </p>
           </div>
           <!-- /.6-->
