Fixed missing images

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div class="container text-center">
         <div data-animate="fadeInDown" class="logo">
           <img
-            src="https://raw.githubusercontent.com/jrayga/JasonRayga/master/ASSETS/img/logo-big.jpg"
+            src="https://raw.githubusercontent.com/jrayga/JasonRayga/master/ASSETS/img/intro-icon.png"
             alt="logo"
             width="130"
           />
