Minor package changes and content changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en" ng-app="module">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta itemprop="name" content="JasonRayga" />
     <meta itemprop="url" content="https://www.jrayga.com/" />
@@ -142,20 +141,23 @@
         <div class="row">
           <div data-animate="fadeInUp" class="col-lg-6">
             <p>
-              As an outgoing and experienced web developer, I possess a strong
-              skill-set in both backend and frontend development.
+              Hi there! 👋 I'm an outgoing and seasoned web developer with
+              expertise in both backend and frontend development.
             </p>
             <p>
-              I have a proven track record of success as the lead developer for
-              the Philippines' first applicant tracking software and resume
-              bank.
+              I take pride in my role as the lead developer behind the
+              Philippines' first applicant tracking system and resume bank, a
+              project that highlights my ability to deliver impactful solutions.
             </p>
             <p>
-              I am well-versed in various programming languages and have
-              experience creating dynamic web and mobile applications.
+              With a versatile skill set spanning multiple programming
+              languages, I specialize in crafting dynamic web and mobile
+              applications that meet modern demands.
             </p>
-
-            <p>Click my picture below to download my resume 😊</p>
+            <p>
+              Curious to know more about my journey? Click my picture below to
+              download my resume! 😊
+            </p>
 
             <div class="row">
               <div data-animate="fadeInUp" class="col-sm-6 mx-auto">
