Did additiona updates on link src for animate.min.css

--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-      integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      href="https://raw.githubusercontent.com/jrayga/JasonRayga/master/ASSETS/css/animate.css/animate.css"
     />
     <link rel="stylesheet" href="./dist/main/css/main.min.css" />
 
