Minor file updates and changes v2

--- a/dev/index.html
+++ b/dev/index.html
@@ -6,7 +6,6 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>All About Me | Jason Rayga</title>
 
@@ -21,47 +20,50 @@
     <!-- build:css ./main/css/main.min.css -->
     <link
       rel="stylesheet"
-      href="../ASSETS/it-worker-theme/vendor/bootstrap/css/bootstrap.min.css"
+      href="../dist/main/assets/it-worker-theme/vendor/bootstrap/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="../ASSETS/it-worker-theme/vendor/owl.carousel/assets/owl.carousel.css"
+      href="../dist/main/assets/it-worker-theme/vendor/owl.carousel/assets/owl.carousel.css"
     />
     <link
       rel="stylesheet"
-      href="../ASSETS/it-worker-theme/vendor/owl.carousel/assets/owl.theme.default.css"
+      href="../dist/main/assets/it-worker-theme/vendor/owl.carousel/assets/owl.theme.default.css"
     />
     <link
       rel="stylesheet"
-      href="../ASSETS/it-worker-theme/vendor/swiper/swiper-bundle.min.css"
+      href="../dist/main/assets/it-worker-theme/vendor/swiper/swiper-bundle.min.css"
     />
     <link
       rel="stylesheet"
-      href="../ASSETS/it-worker-theme/vendor/universal-parallax/universal-parallax.css"
+      href="../dist/main/assets/it-worker-theme/vendor/universal-parallax/universal-parallax.css"
     />
     <link
       rel="stylesheet"
-      href="../ASSETS/it-worker-theme/css/style.black.css"
+      href="../dist/main/assets/it-worker-theme/css/style.black.css"
       id="theme-stylesheet"
     />
-    <link rel="stylesheet" href="../ASSETS/it-worker-theme/css/custom.css" />
+    <link
+      rel="stylesheet"
+      href="../dist/main/assets/it-worker-theme/css/custom.css"
+    />
     <!-- endbuild -->
 
     <!--Main JS -->
     <!-- build:js ./main/js/main.min.js -->
-    <script src="../ASSETS/it-worker-theme/vendor/jquery/jquery.min.js"></script>
-    <script src="../ASSETS/it-worker-theme/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../ASSETS/it-worker-theme/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="../ASSETS/it-worker-theme/vendor/waypoints/lib/noframework.waypoints.min.js"></script>
-    <script src="../ASSETS/it-worker-theme/vendor/universal-parallax/universal-parallax.min.js"></script>
-    <script src="../ASSETS/it-worker-theme/vendor/wow.js/wow.min.js"></script>
-    <script src="../ASSETS/it-worker-theme/vendor/leaflet/leaflet.js"></script>
-    <script src="../ASSETS/it-worker-theme/vendor/mixitup/mixitup.js"></script>
-    <script src="../ASSETS/it-worker-theme/vendor/jquery.cookie/jquery.cookie.js"></script>
-    <script src="../ASSETS/it-worker-theme/vendor/owl.carousel/owl.carousel.min.js"></script>
-    <script src="../ASSETS/it-worker-theme/vendor/waypoints/lib/jquery.waypoints.min.js"></script>
-    <script src="../ASSETS/it-worker-theme/vendor/jquery.counterup/jquery.counterup.js"></script>
-    <script src="../ASSETS/it-worker-theme/js/front.js"></script>
+    <script src="../dist/main/assets/it-worker-theme/vendor/jquery/jquery.min.js"></script>
+    <script src="../dist/main/assets/it-worker-theme/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../dist/main/assets/it-worker-theme/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="../dist/main/assets/it-worker-theme/vendor/waypoints/lib/noframework.waypoints.min.js"></script>
+    <script src="../dist/main/assets/it-worker-theme/vendor/universal-parallax/universal-parallax.min.js"></script>
+    <script src="../dist/main/assets/it-worker-theme/vendor/wow.js/wow.min.js"></script>
+    <script src="../dist/main/assets/it-worker-theme/vendor/leaflet/leaflet.js"></script>
+    <script src="../dist/main/assets/it-worker-theme/vendor/mixitup/mixitup.js"></script>
+    <script src="../dist/main/assets/it-worker-theme/vendor/jquery.cookie/jquery.cookie.js"></script>
+    <script src="../dist/main/assets/it-worker-theme/vendor/owl.carousel/owl.carousel.min.js"></script>
+    <script src="../dist/main/assets/it-worker-theme/vendor/waypoints/lib/jquery.waypoints.min.js"></script>
+    <script src="../dist/main/assets/it-worker-theme/vendor/jquery.counterup/jquery.counterup.js"></script>
+    <script src="../dist/main/assets/it-worker-theme/js/front.js"></script>
     <!-- endbuild -->
   </head>
 
