--- a/index.html
+++ b/index.html
@@ -518,6 +518,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+
     <script type="text/javascript">
       // Scripts here should prevent zooming in when using mobile view
 
@@ -538,6 +539,7 @@
         // special hack to prevent zoom-to-tabs gesture in safari
         document.body.style.zoom = 0.99;
       });
+    </script>
 
     <!-- FontAwesome CSS - loading as last, so it doesn't block rendering-->
     <link
