--- a/index.html
+++ b/index.html
@@ -205,8 +205,21 @@
                 ></div>
               </div>
             </div>
+              <div class="skill-item">
+              <div class="progress-title">SQL Server</div>
+              <div class="progress">
+                <div
+                  role="progressbar"
+                  style="width: 60%"
+                  aria-valuenow="60"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  class="progress-bar"
+                ></div>
+              </div>
+            </div>
             <div class="skill-item">
-              <div class="progress-title">Javascript</div>
+              <div class="progress-title">Javascript & Typescript</div>
               <div class="progress">
                 <div
                   role="progressbar"
@@ -301,7 +314,7 @@
               <div class="progress">
                 <div
                   role="progressbar"
-                  style="width: 60%"
+                  style="width: 50%"
                   aria-valuenow="60"
                   aria-valuemin="0"
                   aria-valuemax="100"
